--- a/ansible/roles/wordpress/tasks/main.yml
+++ b/ansible/roles/wordpress/tasks/main.yml
@@ -16,13 +16,13 @@
       - php7.4-common
       - php7.4-gd
       - php7.4-json
-      - mysql
+      - mysql-client
       update_cache: yes
 
 
   - name: Configurando o vhosts com templates
     template:
-      src: blog.sagara.tec.br.j2
+      src: blog.sagara.tec.br.conf.j2
       dest: /etc/nginx/sites-enabled/default
 
   - name: Download do projeto wordpress
